--- a/style.css
+++ b/style.css
@@ -211,13 +211,43 @@ header .link-button .login {
 
 .why_us{
 margin: 25px 10%;
-
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
 
 }
-.why_us .list-box{
 
+.why_us .list-box{
+display: flex;
+justify-content:space-between;
+align-items: center;
+padding: 20px;
+gap: 10px;
 }
 
 .why_us .list-box .box{
-
+  background-color: var(--bg-body-primary);
+  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+.why_us .list-box .box h2{
+  color: var(--color-primary);
+  margin: 20px 0px;
+  text-transform: capitalize;
+}
+.why_us .list-box .box img{
+  width: 50%;
+  object-fit: cover;
+}
+.why_us .list-box .box p{
+  font-size: 15px;
+  color: var(--color-secondary);
+  letter-spacing: 0.5px;
+  line-height: 25px;
 }
