--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   --bg-primary: #f26440;
   --color-primary: #f26440;
   --color-secondary: #999;
+  --color-dark : #333;
+  --color-light :#ddd ;
 }
 
 * {
@@ -47,14 +49,14 @@ header .logo-link {
   display: flex;
   align-items: center;
 }
-header .logo-link .logo {
+.logo {
   text-transform: capitalize;
   font-size: 30px;
   color: #000;
   font-weight: bolder;
   font-style: italic;
 }
-header .logo-link .logo .logo-first {
+ .logo-first {
   color: var(--color-primary);
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -101,8 +103,6 @@ header .link-button .login {
   display: flex;
   justify-content: space-between;
   height: 500px;
- 
- 
 }
 
 .home .left {
@@ -117,7 +117,7 @@ header .link-button .login {
   transition: 0.5s;
   border: 1px solid var(--color-primary);
 }
-.home .left .orange-link:hover {
+.orange-link:hover {
   background: transparent;
   border: 1px solid var(--color-primary);
   color: var(--color-primary);
@@ -149,7 +149,7 @@ header .link-button .login {
   align-items: center;
   width: 100%;
   background-color: #fff;
-  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   padding: 20px 10%;
   text-align: center;
 }
@@ -164,69 +164,68 @@ header .link-button .login {
 
 /* about */
 
-.about{
- 
-  margin :60px 10%  0px 10%;
+.about {
+  /* margin :60px 10%  0px 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 600px;
- 
-   
+  height: 600px; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 120px;
+  padding: 20px 5%;
 }
 .about .left {
   width: 55%;
-  display: flex;
-  flex-direction: column;
-  height: 600px;
-
+  height: 400px;
 }
- 
-.about .left   img {
+
+.about .left img {
   width: 100%;
- height: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
-
 .about .right {
-  width: 40%; 
-  padding: 0px 20px; 
+  width: 40%;
+  padding: 0px 20px;
 }
 .about .right p {
   font-size: 15px;
   color: var(--color-secondary);
   margin: 25px 0px;
- letter-spacing: 0.5px;
- line-height: 30px;
- text-align: justify;
+  letter-spacing: 0.5px;
+  line-height: 30px;
+  text-align: justify;
 }
 .about .right h2 {
   font-size: 25px;
-  color:  #333;
+  color: #333;
 }
-
 
 /* choise */
 
-.why_us{
-margin: 25px 10%;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-
+.why_us {
+  margin: 25px 10%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
-.why_us .list-box{
-display: flex;
+.why_us .list-box {
+  /* display: flex;
 justify-content:space-between;
 align-items: center;
-padding: 20px;
-gap: 10px;
+padding: 20px 0px;
+gap: 10px; */
+  display: grid;
+  grid-template-columns: repeat(4, 260px);
+  gap: 20px;
 }
 
-.why_us .list-box .box{
+.why_us .list-box .box {
   background-color: var(--bg-body-primary);
   box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -236,18 +235,86 @@ gap: 10px;
   justify-content: center;
   border-radius: 5px;
 }
-.why_us .list-box .box h2{
+.why_us .list-box .box h2 {
   color: var(--color-primary);
   margin: 20px 0px;
   text-transform: capitalize;
 }
-.why_us .list-box .box img{
-  width: 50%;
+.why_us .list-box .box img {
+  width: 40%;
   object-fit: cover;
 }
-.why_us .list-box .box p{
+.why_us .list-box .box p {
   font-size: 15px;
   color: var(--color-secondary);
   letter-spacing: 0.5px;
   line-height: 25px;
 }
+/* decoraion */
+.decoration {
+  margin: 25px 10%;
+}
+.decoration .list-decoration-box {
+  width: 100%;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill,31.11%);
+    gap: 30px;
+
+}
+.decoration .list-decoration-box .box {
+  margin-top: 15px;
+  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
+  padding-bottom: 10px;
+  text-align: center;
+  transition: .3s;
+}
+.decoration .list-decoration-box .box:hover {
+ transform: scale(1.1);
+ cursor: pointer;
+ box-shadow: 0 0 0 3px rgba(209, 9, 9, 0.1);
+}
+.decoration .list-decoration-box .box img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+.decoration .list-decoration-box .box h2 {
+  text-transform: capitalize;
+  font-size: 18px;
+}
+.decoration .list-decoration-box .box p {
+  margin-bottom: 15px;
+  line-height: 25px;
+  font-size: 14px;
+  color: var(--color-secondary);
+}
+.decoration .list-decoration-box .box .orange-link {
+  display: block;
+  margin: 0 auto;
+  width: 95%;
+  transition: 0.3s;
+  border: 1px solid var(--bg-primary);
+}
+/* footer */
+footer .footer-content{
+  margin: 25px 10%;
+  text-align: center;
+}
+ footer .footer-content h1{
+  font-size:40px;
+ }
+ footer .footer-content p{
+   padding-bottom:  20px;
+   letter-spacing: 1px;
+   line-height: 25px;
+ }
+
+ 
+ footer .footer-bottom{
+  background-color: var(--color-dark);
+  padding: 10px;
+  color: var(--color-light);
+  text-align: center;
+  font-size: 14px;
+ }
